<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SkyLines Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="status">Status:</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="empty">Off</string>
    <string name="pref_live_tracking_title">Live Tracking</string>
    <string name="pref_system_settings_title">System Settings</string>
    <string name="title_activity_about">About</string>
    <string name="about_text">SkyLines Tracker</string>
    <string name="version_name_label">Version:</string>
    <string name="not_available">not available</string>
    <string name="msg_pos_sent">Last fix</string>
    <string name="on">Waiting for GPS</string>
    <string name="off">Off</string>
    <string name="resume">Waiting for GPS</string>
    <string name="msg_no_inet">No internet connection</string>
    <string name="ip_address_label">Server ip:</string>
    <string name="ip_address">Server address resolution</string>
    <!--todo this is the real: string name="ip_address_dns" translatable="false">skylines.aero</string-->
    <string name="ip_address_dns" translatable="false">luethi.dyndns.org</string>
    <string name="ip_address_fix" translatable="false">95.128.34.172</string>

    <string name="queue">Queue:</string>
    <string name="queue_values" translatable="false"></string>


</resources>
